--- a/other.html
+++ b/other.html
@@ -8,6 +8,15 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <title>Other</title>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G26Z3JQ3HJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G26Z3JQ3HJ');
+</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
