--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <title>Publications</title>
 </head>
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2CCB19MYG"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W2CCB19MYG'); </script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
