--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,7 @@
 </li>
 <li><p>[J45] H. Jiang, <b>L. You*</b>, W. Wang, and X. Q. Gao, “Multiuser MIMO uplink transmission with electromagnetic exposure constraints: Spectral efficiency and energy efficiency tradeoff,” <b><i>IEEE Communications Letters</i></b>, vol. 26, no. 5, pp. 1096-1100, May 2022. [<a href="https://ieeexplore.ieee.org/document/9730856">Full Paper</a>]</p>
 </li>
-<li><p>[J44] X. X. Niu, <b>L. You</b>, and X. Q. Gao*, “Coordinated multicast and unicast transmission in V2V underlay massive MIMO,” <b><i>Science China Information Sciences</i></b>, vol. 65, pp. 132305, Mar. 2022. [<a href="https://link.springer.com/article/10.1007/s11432-020-3233-2">Full Paper</a>]</p>
+<li><p>[J44] X. X. Niu, <b>L. You</b>, and X. Q. Gao*, “Coordinated multicast and unicast transmission in V2V underlay massive MIMO,” <b><i>Science China Information Sciences</i></b>, vol. 65, Article ID: 132305, Mar. 2022. [<a href="https://link.springer.com/article/10.1007/s11432-020-3233-2">Full Paper</a>]</p>
 </li>
 <li><p>[J43] K.-X. Li, <b>L. You</b>, J. Wang, X. Q. Gao*, C. G. Tsinos, S. Chatzinotas, and B. Ottersten, “Downlink transmit design for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 70, no. 2, pp. 1014-1028, Feb. 2022. [<a href="https://ieeexplore.ieee.org/document/9628071">Full Paper</a>]</p>
 </li>
@@ -114,7 +114,7 @@
 </li>
 <li><p>[J26] X. X. Niu, <b>L. You</b>, and X. Q. Gao*, “Phase shift adjustable pilots for channel acquisition in vehicle-to-vehicle underlay wideband massive MIMO,” <b><i>IEEE Access</i></b>, vol. 8, pp. 203793-203803, Nov. 2020. [<a href="https://ieeexplore.ieee.org/document/9250365">Full Paper</a>]</p>
 </li>
-<li><p>[J25] X. Ling, Z. Gao, Y. Le, <b>L. You</b>, J. Wang*, Z. Ding, and X. Gao, “Satellite-aided consensus protocol for scalable blockchains,” <b><i>Sensors</i></b>, vol. 20, no. 10, pp. 5616, Oct. 2020. [<a href="https://www.mdpi.com/1424-8220/20/19/5616">Full Paper</a>]</p>
+<li><p>[J25] X. Ling, Z. Gao, Y. Le, <b>L. You</b>, J. Wang*, Z. Ding, and X. Gao, “Satellite-aided consensus protocol for scalable blockchains,” <b><i>Sensors</i></b>, vol. 20, no. 19, Article ID: 5616, Oct. 2020. [<a href="https://www.mdpi.com/1424-8220/20/19/5616">Full Paper</a>]</p>
 </li>
 <li><p>[J24] Y. Liu, C. Pan, <b>L. You</b>, and W. Han, “D2D-enabled user cooperation in massive MIMO,” <b><i>IEEE Systems Journal</i></b>, vol. 14, no. 3, pp. 4406-4417, Sep. 2020. [<a href="https://ieeexplore.ieee.org/document/8865622">Full Paper</a>]</p>
 </li>
@@ -156,19 +156,19 @@
 <ul>
 <li><p>[J8] <b>L. You</b>, J. Xiong, K.-X. Li, W. J. Wang, and X. Q. Gao, “Non-orthogonal unicast and multicast transmission for massive MIMO with statistical channel state information,” <b><i>IEEE Access</i></b>, vol. 6, pp. 66841-66849, Nov. 2018. [<a href="https://ieeexplore.ieee.org/document/8520837">Full Paper</a>]</p>
 </li>
-<li><p>[J7] X. Ye, A. Zhang, G. Zheng, <b>L. You</b>, and X. Q. Gao, “Multicell multiuser massive MIMO channel estimation and MPSK signal block detection applying two-dimensional compressed sensing,” <b><i>EURASIP Journal on Wireless Communications and Networking</i></b>, pp. 238, Oct. 2018. [<a href="https://jwcn-eurasipjournals.springeropen.com/articles/10.1186/s13638-018-1252-9">Full Paper</a>]</p>
+<li><p>[J7] X. Ye, A. Zhang, G. Zheng, <b>L. You</b>, and X. Q. Gao, “Multicell multiuser massive MIMO channel estimation and MPSK signal block detection applying two-dimensional compressed sensing,” <b><i>EURASIP Journal on Wireless Communications and Networking</i></b>, pp. 1-10, Oct. 2018. [<a href="https://jwcn-eurasipjournals.springeropen.com/articles/10.1186/s13638-018-1252-9">Full Paper</a>]</p>
 </li>
 <li><p>[J6] W. J. Wang, A. Liu, Q. Zhang, <b>L. You*</b>, X. Q. Gao, and G. Zheng, “Robust multigroup multicast transmission for frame-based multi-beam satellite systems,” <b><i>IEEE Access</i></b>, vol. 6, pp. 46074-46083, Aug. 2018. [<a href="https://ieeexplore.ieee.org/document/8438867">Full Paper</a>]</p>
 </li>
-<li><p>[J5] Y. Chen, X. Q. Gao*, X.-G. Xia, and <b>L. You</b>, “Robust MMSE precoding for massive MIMO transmission with hardware mismatch,” <b><i>Science China Information Sciences</i></b>, vol. 61, no. 4, pp. 042303, Apr. 2018. [<a href="https://link.springer.com/article/10.1007/s11432-016-9126-1">Full Paper</a>]</p>
+<li><p>[J5] Y. Chen, X. Q. Gao*, X.-G. Xia, and <b>L. You</b>, “Robust MMSE precoding for massive MIMO transmission with hardware mismatch,” <b><i>Science China Information Sciences</i></b>, vol. 61, no. 4, Article ID: 042303, Apr. 2018. [<a href="https://link.springer.com/article/10.1007/s11432-016-9126-1">Full Paper</a>]</p>
 </li>
 <li><p>[J4] <b>L. You</b>, X. Q. Gao*, G. Y. Li, X.-G. Xia, and N. Ma, “BDMA for millimeter-wave/Terahertz massive MIMO transmission with per-beam synchronization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 35, no. 7, pp. 1550-1563, Jul. 2017. [<a href="https://ieeexplore.ieee.org/document/7913686">Full Paper</a>]</p>
 </li>
 <li><p>[J3] <b>L. You</b>, X. Q. Gao*, A. L. Swindlehurst, and W. Zhong, “Channel acquisition for massive MIMO-OFDM with adjustable phase shift pilots,,” <b><i>IEEE Transactions on Signal Processing</i></b>, vol. 64, no. 6, pp. 1461-1476, Mar. 2016. [<a href="https://ieeexplore.ieee.org/document/7332961">Full Paper</a>]</p>
 </li>
-<li><p>[J2] <b>L. You</b>, X. Q. Gao*, X.-G. Xia, N. Ma, and Y. Peng, “Pilot reuse for massive MIMO transmission over spatially correlated Rayleigh fading channels,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 14, no. 6, pp. 3352-3366, Jun. 2015. [<a href="https://ieeexplore.ieee.org/document/7045498">Full Paper</a>]</p>
+<li><p>[J2] W. Zhong, <b>L. You</b>, T. T. Lian, and X. Q. Gao, “Multi-cell massive MIMO transmission with coordinated pilot reuse,” <b><i>Science China Technological Sciences</i></b>, vol. 58, no. 12, pp. 2186–2194, Dec. 2015. [<a href="https://link.springer.com/article/10.1007/s11431-015-5960-7">Full Paper</a>]</p>
 </li>
-<li><p>[J1] W. Zhong, <b>L. You</b>, T. T. Lian, and X. Q. Gao, “Multi-cell massive MIMO transmission with coordinated pilot reuse,” <b><i>Science China Technological Sciences</i></b>, vol. 58, no. 12, pp. 2186–2194, Dec. 2015. [<a href="https://link.springer.com/article/10.1007/s11431-015-5960-7">Full Paper</a>]</p>
+<li><p>[J1] <b>L. You</b>, X. Q. Gao*, X.-G. Xia, N. Ma, and Y. Peng, “Pilot reuse for massive MIMO transmission over spatially correlated Rayleigh fading channels,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 14, no. 6, pp. 3352-3366, Jun. 2015. [<a href="https://ieeexplore.ieee.org/document/7045498">Full Paper</a>]</p>
 </li>
 </ul>
 <h2>Conference</h2>
@@ -191,7 +191,7 @@
 </li>
 <li><p>[C30] X. Qiang, <b>L. You</b>, C. G. Tsinos, W. Wang, X. Q. Gao, and B. Ottersten, “Joint communications-sensing for hybrid massive MIMO LEO satellite systems with beam squint,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9814509">Full Paper</a>]</p>
 </li>
-<li><p>[C29] Y. Zhu, G. Sun, W. Wang, <b>L. You</b>, F. Wei, L. Wang, and Y. Chen, “Massive Grant-free Receiver Design For OFDM-based Transmission Over Frequency-selective Fading Channels,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9839286">Full Paper</a>]</p>
+<li><p>[C29] Y. Zhu, G. Sun, W. Wang, <b>L. You</b>, F. Wei, L. Wang, and Y. Chen, “Massive grant-free receiver design for OFDM-based transmission over frequency-selective fading channels,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9839286">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2021</h4>
@@ -245,21 +245,21 @@
 </ul>
 <h4>Before Year 2019</h4>
 <ul>
-<li><p>[C8] H. Zhou, J. Wang, Q. Sun, W. Feng, <b>L. You</b>, and C. Xu, “A ray-optics approach for evaporation duct channel modeling,” in <b><i>Proc. IEEE WCSP 2018</i></b>, Hangzhou, China, Oct. 2018, pp. 1-6. [<a href="https://ieeexplore.ieee.org/document/8555877">Full Paper</a>]</p>
+<li><p>[C8] H. Zhou, J. Wang, Q. Sun, W. Feng, <b>L. You</b>, and C. Xu, “A ray-optics approach for evaporation duct channel modeling,” in <b><i>Proc. IEEE WCSP 2018</i></b>, Hangzhou, China, Oct. 2018, 1-6. [<a href="https://ieeexplore.ieee.org/document/8555877">Full Paper</a>]</p>
 </li>
-<li><p>[C7] T. T. Lian, <b>L. You</b>, W. Zhong and X. Q. Gao, “Coordinated pilot reuse for multi-cell massive MIMO transmission,” in <b><i>Proc. IEEE PIMRC 2014</i></b>, Washington D.C., USA, Sep. 2014, pp. 467–471. [<a href="https://ieeexplore.ieee.org/document/7136215">Full Paper</a>]</p>
+<li><p>[C7] A. Liu, Q. Zhang, W. J. Wang, <b>L. You</b>, Q. Huang, X. Q. Gao, and G. Zheng, “Robust multigroup multicast precoding for frame-based multi-beam satellite communications,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, 1237-1241. [<a href="https://ieeexplore.ieee.org/document/8580877">Full Paper</a>]</p>
 </li>
-<li><p>[C6] A. Liu, Q. Zhang, W. J. Wang, <b>L. You</b>, Q. Huang, X. Q. Gao, and G. Zheng, “Robust multigroup multicast precoding for frame-based multi-beam satellite communications,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, pp. 1237-1241. [<a href="https://ieeexplore.ieee.org/document/8580877">Full Paper</a>]</p>
+<li><p>[C6] X. Yang, <b>L. You</b>, W. J. Wang, and X. Q. Gao, “Channel estimation for massive MIMO uplink transmission over frequency selective fading channels,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, 1427-1432. [<a href="https://ieeexplore.ieee.org/document/8581008">Full Paper</a>]</p>
 </li>
-<li><p>[C5] X. Yang, <b>L. You</b>, W. J. Wang, and X. Q. Gao, “Channel estimation for massive MIMO uplink transmission over frequency selective fading channels,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, pp. 1427-1432. [<a href="https://ieeexplore.ieee.org/document/8581008">Full Paper</a>]</p>
+<li><p>[C5] <b>L. You</b>, X. Q. Gao, G. Y. Li, X.-G. Xia, and N. Ma, “Millimeter-wave/Terahertz massive MIMO BDMA transmission with per-beam synchronization,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, May 2017, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/7997063">Full Paper</a>]</p>
 </li>
-<li><p>[C4] <b>L. You</b>, X. Q. Gao, X.-G. Xia, N. Ma, and Y. Peng, “Massive MIMO transmission with pilot reuse in single cell,” in <b><i>Proc. IEEE ICC 2014</i></b>, Sydney, Australia, Jun. 2014, pp. 4794-4799. [<a href="https://ieeexplore.ieee.org/document/6884077">Full Paper</a>]</p>
+<li><p>[C4] Y. Chen, X. Q. Gao, X.-G. Xia, and <b>L. You</b>, “A robust precoding for RF mismatched massive MIMO transmission,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, May 2017, 1-6. [<a href="https://ieeexplore.ieee.org/document/7996781">Full Paper</a>]</p>
 </li>
-<li><p>[C3] <b>L. You</b>, X. Q. Gao, A. L. Swindlehurst, and W. Zhong, “Adjustable phase shift pilots for sparse massive MIMO-OFDM channels,” in <b><i>Proc. IEEE SPAWC 2015</i></b>, Stockholm, Sweden, Jun. 2015, pp. 206-210. [<a href="https://ieeexplore.ieee.org/document/7227029">Full Paper</a>]</p>
+<li><p>[C3] <b>L. You</b>, X. Q. Gao, A. L. Swindlehurst, and W. Zhong, “Adjustable phase shift pilots for sparse massive MIMO-OFDM channels,” in <b><i>Proc. IEEE SPAWC 2015</i></b>, Stockholm, Sweden, Jun. 2015, 206-210. [<a href="https://ieeexplore.ieee.org/document/7227029">Full Paper</a>]</p>
 </li>
-<li><p>[C2] <b>L. You</b>, X. Q. Gao, G. Y. Li, X.-G. Xia, and N. Ma, “Millimeter-wave/Terahertz massive MIMO BDMA transmission with per-beam synchronization,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, May 2017, pp. 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/7997063">Full Paper</a>]</p>
+<li><p>[C2] T. T. Lian, <b>L. You</b>, W. Zhong and X. Q. Gao, “Coordinated pilot reuse for multi-cell massive MIMO transmission,” in <b><i>Proc. IEEE PIMRC 2014</i></b>, Washington D.C., USA, Sep. 2014, 467–471. [<a href="https://ieeexplore.ieee.org/document/7136215">Full Paper</a>]</p>
 </li>
-<li><p>[C1] Y. Chen, X. Q. Gao, X.-G. Xia, and <b>L. You</b>, “A robust precoding for RF mismatched massive MIMO transmission,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, 2017, May 2017, pp. 1-6. [<a href="https://ieeexplore.ieee.org/document/7996781">Full Paper</a>]</p>
+<li><p>[C1] <b>L. You</b>, X. Q. Gao, X.-G. Xia, N. Ma, and Y. Peng, “Massive MIMO transmission with pilot reuse in single cell,” in <b><i>Proc. IEEE ICC 2014</i></b>, Sydney, Australia, Jun. 2014, 4794-4799. [<a href="https://ieeexplore.ieee.org/document/6884077">Full Paper</a>]</p>
 </li>
 </ul>
 </td>
