--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,8 @@
 <h2>Journal</h2>
 <h4>Year 2023</h4>
 <ul>
+<li><p>[J65] L. Qiao, A. Liao, Z. Li, H. Wang, Z. Gao, X. Gao, Y. Su, P. Xiao, <b>L. You</b>, and D. W. K. Ng, “Sensing user's activity, channel, and location with near-field extra-large-scale MIMO,” <b><i>IEEE Transactions on Communications</i></b>, 2023.</p>
+</li>
 <li><p>[J64] H. Deng, Z. Chang*, <b>L. You</b>, G. Min, S. Garg, and G. Kaddoum, “Trajectory design and resource allocation for multi-UAV networks: Deep reinforcement learning approaches,” <b><i>IEEE Transactions on Network Science and Engineering</i></b>, vol. 10, no. 5, pp. 2940-2951, Sep.-Oct. 2023. [<a href="https://ieeexplore.ieee.org/document/9767553">Full Paper</a>]</p>
 </li>
 <li><p>[J63] B. Jiang, Y. Yan, J. Zhao, X. Xiao, <b>L. You*</b>, D. Zhang, J. Lei, K. Wang, W. Wang, and X. Gao, “Total and minimum energy efficiency tradeoff in robust multigroup multicast satellite communications,” <b><i>Space: Science &amp; Technology</i></b>, vol. 3, Article ID: 0059, Aug. 2023. [<a href="https://spj.science.org/doi/full/10.34133/space.0059">Full Paper</a>]</p>
@@ -174,20 +176,22 @@
 <h2>Conference</h2>
 <h4>Year 2023</h4>
 <ul>
-<li><p>[C36] C. Xie, and <b>L. You*</b>, “Deep learning aided beam prediction in dual-band multi-cell massive MIMO system,” in <b><i>Proc. URSI GASS 2023</i></b>, Sapporo, Japan, Aug. 2023, 1-4. [<a href="https://ieeexplore.ieee.org/document/10265352">Full Paper</a>]</p>
+<li><p>[C37] C. Xie, and <b>L. You*</b>, “Deep learning aided beam prediction in dual-band multi-cell massive MIMO system,” in <b><i>Proc. URSI GASS 2023</i></b>, Sapporo, Japan, Aug. 2023, 1-4. [<a href="https://ieeexplore.ieee.org/document/10265352">Full Paper</a>]</p>
 </li>
-<li><p>[C35] X. Qiang, <b>L. You*</b>, Y. Zhu, F. Jiang, C. G. Tsinos, W. Wang, H. Wymeersch, and X. Q. Gao, “Hybrid precoding for integrated communications and localization in massive MIMO LEO satellite systems,” in <b><i>Proc. IEEE ICC 2023</i></b>, Rome, Italy, May 2023, 1-6.</p>
+<li><p>[C36] X. Qiang, <b>L. You*</b>, Y. Zhu, F. Jiang, C. G. Tsinos, W. Wang, H. Wymeersch, and X. Q. Gao, “Hybrid precoding for integrated communications and localization in massive MIMO LEO satellite systems,” in <b><i>Proc. IEEE ICC 2023</i></b>, Rome, Italy, May 2023, 1-6.</p>
 </li>
-<li><p>[C34] J. Tang, <b>L. You</b>, X. Gao, and X.-G. Xia, “Statistical CSI acquisition in multi-frequency communication systems,” in <b><i>Proc. IEEE WCNC 2023</i></b>, Glasgow, United Kingdom (Great Britain), Mar. 2023, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/10118598">Full Paper</a>]</p>
+<li><p>[C35] J. Tang, <b>L. You</b>, X. Gao, and X.-G. Xia, “Statistical CSI acquisition in multi-frequency communication systems,” in <b><i>Proc. IEEE WCNC 2023</i></b>, Glasgow, United Kingdom (Great Britain), Mar. 2023, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/10118598">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2022</h4>
 <ul>
-<li><p>[C33] H. Jiang, <b>L. You*</b>, J. Wang, W. Wang, and X. Gao, “EM exposure aware transmission design for hybrid RIS and DMA assisted multiuser MIMO uplink,” in <b><i>Proc. IEEE GLOBECOM 2022</i></b>, Rio de Janeiro, Brazil, Dec. 2022, 1600-1605. [<a href="https://ieeexplore.ieee.org/document/10001589">Full Paper</a>]</p>
+<li><p>[C34] H. Jiang, <b>L. You*</b>, J. Wang, W. Wang, and X. Gao, “EM exposure aware transmission design for hybrid RIS and DMA assisted multiuser MIMO uplink,” in <b><i>Proc. IEEE GLOBECOM 2022</i></b>, Rio de Janeiro, Brazil, Dec. 2022, 1600-1605. [<a href="https://ieeexplore.ieee.org/document/10001589">Full Paper</a>]</p>
+</li>
+<li><p>[C33] H. Jiang, <b>Li You</b>, A. Elzanaty, J. Wang, W. Wang, X. Gao, and M.-S. Alouini, “Electromagnetic Exposure Aware RSMA for Multiuser Massive MIMO Uplink,” in <b><i>Proc. ICSPS 2022</i></b>, Jiangsu, China, Nov. 2022, 634-639. [<a href="https://ieeexplore.ieee.org/document/10218551">Full Paper</a>]</p>
 </li>
 <li><p>[C32] M. Qian, <b>L. You*</b>, W. Wang, and X. Gao, “Low-complexity multi-user MIMO uplink transmission assisted by dual-polarized reconfigurable intelligent surface,” in <b><i>Proc. IEEE ICCC 2022</i></b>, Foshan City, China, Aug. 2022, 576-581. [<a href="https://ieeexplore.ieee.org/document/9880726">Full Paper</a>]</p>
 </li>
-<li><p>[C31] Y. Ye, <b>L. You*</b>, “Energy efficiency optimization for radar-communication coexistence with statistical CSIT,” in <b><i>Proc. AT-AP-RASC 2022</i></b>, Gran Canaria, Spain, Jun. 2022, 1-4. [<a href="https://ieeexplore.ieee.org/document/9814317">Full Paper</a>]</p>
+<li><p>[C31] Y. Ye, <b>L. You*</b>, “Energy efficiency optimization for radar-communication coexistence with statistical CSIT,” in <b><i>Proc. URSI AT-AP-RASC 2022</i></b>, Gran Canaria, Spain, Jun. 2022, 1-4. [<a href="https://ieeexplore.ieee.org/document/9814317">Full Paper</a>]</p>
 </li>
 <li><p>[C30] X. Qiang, <b>L. You</b>, C. G. Tsinos, W. Wang, X. Q. Gao, and B. Ottersten, “Joint communications-sensing for hybrid massive MIMO LEO satellite systems with beam squint,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9814509">Full Paper</a>]</p>
 </li>
