--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">     
+    <style>  
+        /* 添加一些简单的样式 */  
+        #more-content {  
+            display: none; /* 初始隐藏 */  
+            margin-top: 10px;  
+        }  
+        .toggle-button {  
+            cursor: pointer;  
+            padding: 10px;  
+            border: 1px solid #ccc;  
+            display: inline-block;  
+        }  
+    </style>  
 <title>Li You</title>
 </head>
 <body>
@@ -35,7 +49,33 @@
 Email: lyou@seu.edu.cn <br />
 [<a href="https://scholar.google.com/citations?user=UWh5090AAAAJ&amp;hl=en">Google Scholar</a>] <br /></p>
 </td></tr></table>
-<h2>News</h2>
+<h2>News</h2> 
+<p><ul>
+<li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
+</li>
+<li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2024.05</span>]  Yan Huang's paper on satellite communications was accepted by Space: Science &amp; Technology. (黄彦的关于卫星通信的论文被Space: Science &amp; Technology录用) <a href="https://spj.science.org/doi/10.34133/space.0178">[link]</a></p>
+</li></p>   
+<div class="toggle-button" onclick="toggleContent()">点击展开更多</div>   
+<div id="more-content">  
+<p><li><p>[<span class="statement">2024.03</span>]  Our work on integrated communications and localization for massive MIMO LEO satellite systems was accepted by IEEE Transactions on Wireless Communications. (课题组关于大规模MIMO低轨卫星通信定位一体化传输的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10478820">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2024.03</span>]  Xiang Xiao's paper on satellite communications was accepted by Science China Information Sciences. (肖翔的关于卫星通信的论文被Science China Information Sciences录用) <a href="https://link.springer.com/article/10.1007/s11432-023-3969-4?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20240528&amp;utm_content=10.1007%2Fs11432-023-3969-4">[link]</a></p>
+</li></p>  </div>   
+    <script>  
+        // JavaScript 函数来切换内容的显示状态  
+        function toggleContent() {  
+            var content = document.getElementById("more-content");  
+            if (content.style.display === "none" || content.style.display === "") {  
+                content.style.display = "block";  
+                document.querySelector(".toggle-button").textContent = "点击折叠";  
+            } else {  
+                content.style.display = "none";  
+                document.querySelector(".toggle-button").textContent = "点击展开更多";  
+            }  
+        }  
+    </script>  
 <ul>
 <li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
 </li>
