--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Email: lyou@seu.edu.cn <br />
 </p>   
 <div class="toggle-button" onclick="toggleContent()"> <p><li>View More Earlier News </p></li></div>   
 <div id="more-content"> 
+  <div class="triangle"></div>
 <p>
 <li><p>[<span class="statement">2023.11</span>]  Li You was awarded the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. (获2023年度中国通信学会科学技术奖一等奖) <a href="https://mp.weixin.qq.com/s/od2q0Vfp4DLuPGOcZ0F-Gw">[link]</a></p>
 </li>
@@ -85,7 +86,8 @@ Email: lyou@seu.edu.cn <br />
 </div>   
     <script>    
         function toggleContent() {  
-            var content = document.getElementById("more-content");  
+            var content = document.getElementById("more-content"); 
+            var triangle = document.querySelector(".triangle");       
             if (content.style.display === "none" || content.style.display === "") {  
                 content.style.display = "block";  
                 document.querySelector(".toggle-button").textContent = "View More Earlier News";  
@@ -94,6 +96,9 @@ Email: lyou@seu.edu.cn <br />
                 document.querySelector(".toggle-button").textContent = "View More Earlier News";  
             }  
         }  
+      triangle.addEventListener("click", function() {
+  content.classList.toggle("open");
+});
     </script>  
 <h2>About Me</h2>
 <p>Li You (Senior Member, IEEE) received the B.E. and M.E. degrees from the Nanjing University of Aeronautics and Astronautics, Nanjing, China, in 2009 and 2012, respectively, and the Ph.D. degree from Southeast University, Nanjing, in 2016, all in electrical engineering.</p>
