--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">     
+<style>   
+        #more-content {  
+            display: none;  
+            margin-top: 10px;  
+        }   
+    </style> 
 <title>Li You</title>
 </head>
 <body>
