--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 </ul></p>  
 </div>   
-  <style>
-const content = document.getElementById("content");
-const triangle = document.querySelector(".triangle");
+  <script>  
 triangle.addEventListener("click", function() {
+  const content = document.getElementById("content");
+  const triangle = document.querySelector(".triangle");
   content.classList.toggle("open");
 }); 
-  </style>
+  </script>  
 <h2>About Me</h2>
 <p>Li You (Senior Member, IEEE) received the B.E. and M.E. degrees from the Nanjing University of Aeronautics and Astronautics, Nanjing, China, in 2009 and 2012, respectively, and the Ph.D. degree from Southeast University, Nanjing, in 2016, all in electrical engineering.</p>
 <p>From 2014 to 2015, he has conducted a Visiting Research at the Center for Pervasive Communications and Computing, University of California Irvine, Irvine, CA, USA. Since 2016, he has been with the Faculty of the National Mobile Communications Research Laboratory, Southeast University. His research interests lie in the general areas of communications, signal processing, and information theory, with the current emphasis on massive MIMO and XL-MIMO communications.</p>
