--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@ Email: lyou@seu.edu.cn <br />
 <li><p>[<span class="statement">2024.01</span>]  Hanyu Jiang received the Excellent Master Thesis Award from the China Institute of Communications (CIC) in 2023. (姜涵予的硕士学位论文入选“2023年度中国通信学会硕士学位论文激励计划”) <a href="https://www.china-cic.cn/Detail/24/5256/5256">[link]</a></p>
 </li>   
 <div class="content-container">  
-    <div class="toggle-icon" id="toggleIcon"></div>  
+    <div class="toggle-icon" id="toggleIcon">View More Earlier News</div>  
     <div class="toggle-content" id="toggleContent">  
-    <p>
 <li><p>[<span class="statement">2023.11</span>]  Li You was awarded the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. (获2023年度中国通信学会科学技术奖一等奖) <a href="https://mp.weixin.qq.com/s/od2q0Vfp4DLuPGOcZ0F-Gw">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2023.11</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Communications Letters. (叶育琦的关于流体天线的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10328751">[link]</a></p>
@@ -91,7 +90,7 @@ Email: lyou@seu.edu.cn <br />
 <li><p>[<span class="statement">2023.11</span>]  Li You was listed in the 2023 Stanford's list of World Top 2% scientists. (尤力入选2023年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/N5jBnNoLbPmm8a6eNJGszw">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2023.08</span>]  Yuqi Ye and 5 other students won the second prize in the 18th China Graduate Electronic Design Competition National Finals. (叶育琦等6名同学获得第18届中国研究生电子设计竞赛全国总决赛二等奖) <a href="https://mp.weixin.qq.com/s/ih0IFUNk2buOt58cOqQJQQ">[link]</a></p>
-</li></p>  
+</li>  
     </div>  
 </div> 
 </ul></p>    
@@ -104,6 +103,7 @@ Email: lyou@seu.edu.cn <br />
                 icon.classList.toggle('rotated'); 
             } else {  
                 content.style.display = "none";  
+                icon.classList.toggle('rotated'); 
             }  
     });  
 </script>   
