--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Email: lyou@seu.edu.cn <br />
 <li><p>[<span class="statement">2024.01</span>]  Hanyu Jiang received the Excellent Master Thesis Award from the China Institute of Communications (CIC) in 2023. (姜涵予的硕士学位论文入选“2023年度中国通信学会硕士学位论文激励计划”) <a href="https://www.china-cic.cn/Detail/24/5256/5256">[link]</a></p>
 </li>   
 <div class="content-container">  
-    <div class="toggle-icon" id="toggleIcon">View More Earlier News</div>  
+    <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
     <div class="toggle-content" id="toggleContent">  
 <li><p>[<span class="statement">2023.11</span>]  Li You was awarded the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. (获2023年度中国通信学会科学技术奖一等奖) <a href="https://mp.weixin.qq.com/s/od2q0Vfp4DLuPGOcZ0F-Gw">[link]</a></p>
 </li>
