--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2024.09</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite localization systems was accepted by IEEE Transactions on Vehicular Technology. (朱永祥的关于大规模MIMO低轨卫星定位的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10695037">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2024.09</span>]  Haohong Che's paper on XL-MIMO was accepted by IEEE Transactions on Vehicular Technology. (车昊鸿的关于超大规模MIMO的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10693363/">[link]</a></p>
+</li> 
 <li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
 </li>
 <li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
@@ -74,17 +80,17 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.03</span>]  Our work on integrated communications and localization for massive MIMO LEO satellite systems was accepted by IEEE Transactions on Wireless Communications. (课题组关于大规模MIMO低轨卫星通信定位一体化传输的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10478820">[link]</a></p>
 </li>
+</ul></p>
+<div class="content-container">  
+<div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
+<div class="toggle-content" id="toggleContent">  
+<p><ul>
 <li><p>[<span class="statement">2024.03</span>]  Xiang Xiao's paper on satellite communications was accepted by Science China Information Sciences. (肖翔的关于卫星通信的论文被Science China Information Sciences录用) <a href="https://link.springer.com/article/10.1007/s11432-023-3969-4?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20240528&amp;utm_content=10.1007%2Fs11432-023-3969-4">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.01</span>]  Kelin Huang's paper on DMA was accepted by IEEE Wireless Communications Letters. (黄珂琳的关于动态超表面天线的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10415645">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.01</span>]  Hanyu Jiang received the Excellent Master Thesis Award from the China Institute of Communications (CIC) in 2023. (姜涵予的硕士学位论文入选“2023年度中国通信学会硕士学位论文激励计划”) <a href="https://www.china-cic.cn/Detail/24/5256/5256">[link]</a></p>
 </li> 
-</ul></p>
-<div class="content-container">  
-    <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
-    <div class="toggle-content" id="toggleContent">  
-<p><ul>
 <li><p>[<span class="statement">2023.11</span>]  Li You was awarded the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. (获2023年度中国通信学会科学技术奖一等奖) <a href="https://mp.weixin.qq.com/s/od2q0Vfp4DLuPGOcZ0F-Gw">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2023.11</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Communications Letters. (叶育琦的关于流体天线的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10328751">[link]</a></p>
@@ -96,7 +102,6 @@ Email: lyou@seu.edu.cn <br />
 </ul></p>
 </div>  
 </div> 
-    
 <script>  
     document.getElementById('toggleIcon').addEventListener('click', function() {  
         var content = document.getElementById('toggleContent');  
