--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     }  
     .toggle-content {  
         display: none; /* 初始隐藏 */  
-            margin-top: 5px;  
+            margin-top: 3px;
+            margin-bottom: 3px;
     }    
 </style>  
 <title>Li You</title>
