--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <table class="imgtable"><tr><td>
 <img src="photo/1.jpg" alt="alt text" width="128px" height="179px" />&nbsp;</td>
 <td align="left"><p><a href="https://liyouSEU.github.io">Li You (尤力)</a><br />
-<i>Ph.D., Associate Professor</i> <br />
+<i>Ph.D., Professor</i> <br />
 <br />
 <a href="https://ncrl.seu.edu.cn/">National Mobile Communications Reseach Laboratory (NCRL)</a> <br />
 <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
@@ -120,7 +120,7 @@ Email: lyou@seu.edu.cn <br />
 <p>Li You (Senior Member, IEEE) received the B.E. and M.E. degrees from the Nanjing University of Aeronautics and Astronautics, Nanjing, China, in 2009 and 2012, respectively, and the Ph.D. degree from Southeast University, Nanjing, in 2016, all in electrical engineering.</p>
 <p>From 2014 to 2015, he has conducted a Visiting Research at the Center for Pervasive Communications and Computing, University of California Irvine, Irvine, CA, USA. Since 2016, he has been with the Faculty of the National Mobile Communications Research Laboratory, Southeast University. His research interests lie in the general areas of communications, signal processing, and information theory, with the current emphasis on massive MIMO and XL-MIMO communications.</p>
 <p>Dr. You received the National Excellent Doctoral Dissertation Award from the China Institute of Communications (CIC) in 2017, the Young Elite Scientists Sponsorship Program (2019–2021) by the China Association for Science and Technology (CAST), the URSI Young Scientist Award in 2021, the National Natural Science Foundation of China for Outstanding Young Scholars in 2023, and the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. He served as the Wireless Communications Symposium Co-Chair of IEEE ICC 2023 and the Satellite Communications Symposium Co-Chair of IEEE WCSP 2022. He is currently on the editorial board of IEEE Signal Processing Letters. <br /><br /></p>
-<p>尤力，东南大学副研究员，博士生导师，国家优青。2009年及2012年于南京航空航天大学电子工程系分别获得学士及硕士学位，2016年于东南大学移动通信国家重点实验室获得博士学位，其后留校任教，曾赴美国加州大学欧文分校开展合作研究。</p>
+<p>尤力，东南大学教授，博士生导师，国家优青。2009年及2012年于南京航空航天大学电子工程系分别获得学士及硕士学位，2016年于东南大学移动通信国家重点实验室获得博士学位，其后留校任教，曾赴美国加州大学欧文分校开展合作研究。</p>
 <p>当前研究方向主要包括:<span class="statement"><b>大规模/超大规模MIMO无线通信、空天地海一体化无线通信、智能通信等</b></span>。近年来承担和参与国家自然科学基金、国家重点研发计划、江苏省前沿引领技术基础研究专项以及华为合作框架等多个项目。相关研究成果在IEEE JSAC等期刊及IEEE ICC等会议发表论文100余篇，出版专著“大规模MIMO无线通信”，入选“十三五”国家重大出版工程规划。获授权国家发明专利60余项。担任IEEE Signal Processing Letters编委，担任IEEE ICC 2023 Wireless Communications Symposium以及IEEE WCSP 2022 Satellite Communications Symposium共同主席。获2023年度中国通信学会科学技术奖一等奖，2023年度国家优秀青年科学基金，2021年度国际无线电科学联盟（URSI）青年科学家奖， 入选2020年度中国科协青年人才托举工程， 获2017年度中国通信学会优秀博士学位论文。</p>
 <h2>Education </h2>
 <ul>
@@ -133,7 +133,9 @@ Email: lyou@seu.edu.cn <br />
 </ul>
 <h2>Working experiences</h2>
 <ul>
-<li><p><b>Associate Professor</b>, April 2019 – present, <a href="https://ncrl.seu.edu.cn/">National Mobile Communications Research Laboratory</a>, <a href="https://www.seu.edu.cn/">Southeast University</a>, Nanjing, China.</p>
+<li><p><b>Professor</b>, April 2024 – present, <a href="https://ncrl.seu.edu.cn/">National Mobile Communications Research Laboratory</a>, <a href="https://www.seu.edu.cn/">Southeast University</a>, Nanjing, China.</p>
+</li>
+<li><p><b>Associate Professor</b>, April 2019 – April 2024, <a href="https://ncrl.seu.edu.cn/">National Mobile Communications Research Laboratory</a>, <a href="https://www.seu.edu.cn/">Southeast University</a>, Nanjing, China.</p>
 </li>
 <li><p><b>Assistant Professor</b>, September 2016 – April 2019, <a href="https://ncrl.seu.edu.cn/">National Mobile Communications Research Laboratory</a>, <a href="https://www.seu.edu.cn/">Southeast University</a>, Nanjing, China.</p>
 </li>
